<resources>
    <string name="app_name">PressureBlack</string>
    <string name="title_home">8.18</string>
    <string name="title_record">Record</string>
    <string name="title_info">Information</string>
    <string name="title_mine">Settings</string>
    <string name="title_next">Next</string>
    <string name="title_start_record">Start Record</string>

    <string name="title_home_bottom">Home Page</string>
    <string name="title_record_bottom">Record</string>
    <string name="title_info_bottom">Information</string>
    <string name="title_mine_bottom">Settings</string>

    <string name="text_guide_title_1">Protecting the heart starts with healthy blood pressure</string>
    <string name="text_guide_title_2">Master blood pressure trends and predict a healthy future</string>
    <string name="text_guide_title_3">Record blood pressure and grasp a healthy pulse</string>

    <string name="text_guide_content_1">Understanding the importance of blood pressure and taking the first step towards maintaining cardiovascular health</string>

    <string name="home_top_title">Blood pressure records</string>
    <string name="home_top_content">Keep recording your blood pressure to understand your health status</string>

    <string name="record_toast">Please maintain systolic blood pressure above diastolic blood pressure</string>

    <string name="home_top_to_record">To Record</string>
    <string name="home_question">Question &amp; Answer</string>

    <string name="record_recent">Recent 24 hour</string>
    <string name="record_week">This week</string>
    <string name="record_month">This month</string>
    <string name="record_7day">7 Days</string>
    <string name="record_last_month">Last month</string>
    <string name="record_all">All</string>

    <string name="record_unit">mmHg</string>
    <string name="record_new">+ New Record</string>
    <string name="record_more">More</string>
    <string name="record_record_now">Record now</string>


    <string name="record_add">New Record</string>
    <string name="record_edit">Edit Record</string>


    <string name="title_set_time">Set time</string>
    <string name="title_year">Year</string>
    <string name="title_month">Month</string>
    <string name="title_day">Day</string>
    <string name="title_hour">Hour</string>
    <string name="title_minute">Minute</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_confirm">Confirm</string>
    <string name="title_skip">Skip</string>

    <string name="title_systolic">Systolic</string>
    <string name="title_sys">SYS</string>
    <string name="title_diastolic">Diastolic</string>
    <string name="title_dia">DIA</string>
    <string name="title_unit">mmHg</string>

    <string name="title_h0">Hypotension</string>
    <string name="title_h1">Normal</string>
    <string name="title_h2">Elevated</string>
    <string name="title_h3">Hypertension Stage 1</string>
    <string name="title_h4">Hypertension Stage 2</string>
    <string name="title_h5">Hypertension crisis</string>

    <string name="content_h0">(sys &lt;90 or dia &lt;60)</string>
    <string name="content_h1">(sys 90–119 and dia 60–79)</string>
    <string name="content_h2">(sys 120–129 and dia 60–79)</string>
    <string name="content_h3">(sys 130–139 or dia 80–89)</string>
    <string name="content_h4">(sys 140–180 or dia 90–120)</string>
    <string name="content_h5">(sys 180+ or dia 120+)</string>

    <string name="des_h0">Maintain sufficient moisture and exercise regularly.</string>
    <string name="des_h1">Continue to maintain a healthy lifestyle. </string>
    <string name="des_h2">Pay attention to your diet and reduce salt intake.</string>
    <string name="des_h3">Improve your lifestyle, exercise regularly, and control your diet.</string>
    <string name="des_h4">Due to the possibility of requiring medication, please consult a doctor as soon as possible.</string>
    <string name="des_h5">Timely seek medical attention and develop appropriate treatment plans.</string>

    <string name="mine_alarm">Set alarm clock</string>
    <string name="mine_language">Set Language</string>
    <string name="mine_feed">Feedback</string>
    <string name="mine_privacy">Privacy Policy</string>
    <string name="mine_policy">User Agreement</string>
    <string name="mine_shared">Share Application</string>
    <string name="mine_upgrade">Upgrade</string>

    <string name="tx_warning_title">Current minute\'s time had data</string>
    <string name="tx_warning_content">Cover current data?</string>


</resources>