<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/nav_bg"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_home"
            android:gravity="center"
            android:checked="true"
            android:textColor="@color/color_bottom_text"
            android:text="@string/title_home_bottom" />

        <RadioButton
            android:id="@+id/rb_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_weight="1"
            android:textColor="@color/color_bottom_text"
            android:drawableTop="@drawable/ic_record"
            android:gravity="center"
            android:text="@string/title_record_bottom" />

        <RadioButton
            android:id="@+id/rb_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_weight="1"
            android:textColor="@color/color_bottom_text"
            android:drawableTop="@drawable/ic_info"
            android:gravity="center"
            android:text="@string/title_info_bottom" />

        <RadioButton
            android:id="@+id/rb_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_weight="1"
            android:textColor="@color/color_bottom_text"
            android:drawableTop="@drawable/ic_mine"
            android:gravity="center"
            android:text="@string/title_mine_bottom" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>