<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/trans">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bg_dialog_date"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_record_item_12"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="22sp"
            android:text="@string/title_set_time"
            android:textColor="@color/set_time_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17sp"
            android:lineHeight="18sp"
            android:text="@string/title_year"
            android:textColor="@color/set_time_text"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_year"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_year" />

        <View
            android:id="@+id/line_year"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/text_setting_time_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_year" />

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineHeight="18sp"
            android:text="@string/title_month"
            android:textColor="@color/set_time_text"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_year" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_month"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_month" />

        <View
            android:id="@+id/line_month"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/text_setting_time_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_month" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineHeight="18sp"
            android:text="@string/title_day"
            android:textColor="@color/set_time_text"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_month" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_day"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_day" />

        <View
            android:id="@+id/line_day"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/text_setting_time_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_day" />

        <TextView
            android:id="@+id/tv_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineHeight="18sp"
            android:text="@string/title_hour"
            android:textColor="@color/set_time_text"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_day" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_hour"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hour" />

        <View
            android:id="@+id/line_hour"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/text_setting_time_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_hour" />

        <TextView
            android:id="@+id/tv_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineHeight="18sp"
            android:text="@string/title_minute"
            android:textColor="@color/set_time_text"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_hour" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_minute"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_minute" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_bg_settime_cancel_btn_23"
            android:lineHeight="20sp"
            android:text="@string/title_cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dialog_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_minute" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_bg_settime_confirm_btn_23"
            android:lineHeight="20sp"
            android:text="@string/title_confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dialog_cancel"
            app:layout_constraintTop_toBottomOf="@id/group_minute" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>