<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".ui.activity.NewActivity">

    <include
        android:id="@+id/new_title"
        layout="@layout/layout_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_level"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@color/record_item_color"
        app:layout_constraintTop_toBottomOf="@id/new_title">

        <TextView
            android:id="@+id/level_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="21dp"
            android:text="@string/title_h0"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/level_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineHeight="16sp"
            android:text="@string/content_h0"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/level_title"
            app:layout_constraintTop_toBottomOf="@id/level_title" />

        <ImageView
            android:id="@+id/level_seek"
            android:layout_width="0dp"
            android:layout_height="11dp"
            android:layout_marginEnd="26dp"
            android:background="@mipmap/bg_seekbar"
            app:layout_constraintBottom_toTopOf="@id/level_des"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/level_title"
            app:layout_constraintTop_toBottomOf="@id/level_content" />

        <ImageView
            android:id="@+id/level_progress"
            android:layout_width="11dp"
            android:layout_height="22dp"
            android:src="@drawable/shape_bg_seekbar_progress"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/level_seek"
            app:layout_constraintStart_toStartOf="@id/level_seek"
            app:layout_constraintTop_toTopOf="@id/level_seek"/>

        <TextView
            android:id="@+id/level_des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="17dp"
            android:lines="2"
            android:text="@string/des_h0"
            android:textColor="@color/record_new_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/level_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_time"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/shape_bg_record_new_16"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_level">

        <TextView
            android:id="@+id/record_new_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2023-08-04 14:35"
            android:textColor="@color/record_new_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_drop_down_24"
            app:layout_constraintBottom_toBottomOf="@id/record_new_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/record_new_time"
            app:layout_constraintTop_toTopOf="@id/record_new_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_sys"
        android:layout_width="106dp"
        android:layout_height="223dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_bg_record_new_16"
        app:layout_constraintStart_toStartOf="@id/cl_time"
        app:layout_constraintTop_toBottomOf="@id/cl_time">

        <TextView
            android:id="@+id/sys_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/title_systolic"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sys_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_unit"
            android:textColor="@color/record_new_unit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sys_title" />

        <com.testbird.pressureblack.ui.view.SDPicker
            android:id="@+id/sys_number_picker"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="29dp"
            android:selectionDividerHeight="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sys_unit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_dias"
        android:layout_width="106dp"
        android:layout_height="223dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_bg_record_new_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_time">

        <TextView
            android:id="@+id/dias_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:text="@string/title_diastolic"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dias_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_unit"
            android:textColor="@color/record_new_unit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dias_title" />

        <com.testbird.pressureblack.ui.view.SDPicker
            android:id="@+id/dias_number_picker"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="29dp"
            android:selectionDividerHeight="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dias_unit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/record_new_confirm"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/shape_bg_27"
        android:text="@string/title_confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_sys" />


</androidx.constraintlayout.widget.ConstraintLayout>